objects/Governing_Contract_Type__mdt.object
<CustomObject>
    <description>Setting used to determine CCDB contract type based on Platform and Offering Type</description>
    <fields>
        <fullName>Governing_Contract_Type__c</fullName>
        <label>Governing Contract Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Offering Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Governing Contract Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Governing_Contract_Type__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Platform__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Governing Contract Types</pluralLabel>
</CustomObject>